WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30168
REGRESSION (
r49213
): http/tests/plugins/local-geturl-from-remote.html is failing on Windows
https://bugs.webkit.org/show_bug.cgi?id=30168
Summary
REGRESSION (r49213): http/tests/plugins/local-geturl-from-remote.html is fail...
Adam Roben (:aroben)
Reported
2009-10-07 08:08:06 PDT
Created
attachment 40788
[details]
Patch v1
r49213
contained a typo that is causing http/tests/plugins/local-geturl-from-remote.html to fail on Windows.
Attachments
Patch v1
(1.59 KB, patch)
2009-10-07 08:08 PDT
,
Adam Roben (:aroben)
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2009-10-07 08:12:34 PDT
Committed
r49244
: <
http://trac.webkit.org/changeset/49244
>
Adam Barth
Comment 2
2009-10-07 08:58:35 PDT
Thanks for fixing this. How did the old code even compile?
Alexey Proskuryakov
Comment 3
2009-10-07 21:23:43 PDT
> How did the old code even compile?
It's operator comma, which is often used in for loops, but is universally available in fact: for (i =0, j = 0; i != 1; i++, j++) {...} The value of such an expression is the value of the last sub-expression. Unless I'm hallucinating, the ChangeLog comment here got it wrong (the condition was always false, not always true).
Adam Barth
Comment 4
2009-10-07 21:26:17 PDT
Wow, that's ridiculous. Thanks for explaining.
Adam Roben (:aroben)
Comment 5
2009-10-08 06:49:20 PDT
(In reply to
comment #3
)
> Unless > I'm hallucinating, the ChangeLog comment here got it wrong (the condition was > always false, not always true).
The ChangeLog was wrong.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug