Fix typo in PluginView::load that was causing cross-origin loads to be allowed

This typo was introduced in the build fix in r49213.

Fixes <http://webkit.org/b/30168> REGRESSION (r49213):
http/tests/plugins/local-geturl-from-remote.html is failing on Windows

Reviewed by Sam Weinig.

* plugins/PluginView.cpp:
(WebCore::PluginView::load): Removed a comma operator that was making
a condition always evaluate to true.

Canonical link: https://commits.webkit.org/40803@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49244 268f45cc-cd09-0410-ab3c-d52691b4dbfc